Correção CSS Min
Desfeito minificação de CSS que tem problemas com mediaqueries.

--- a/html/espera.html
+++ b/html/espera.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Group VOID">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<meta property="og:image" content="imagens/logo-reclamacoes-procon-facebook.png">
-	<link rel="stylesheet" href="css/layout-inicio-min.css">
+	<link rel="stylesheet" href="css/layout-inicio.css">
 	<link href="http://fonts.googleapis.com/css?family=Maven+Pro:400,700" rel="stylesheet" type="text/css">
 	<script src="js/html5.js"></script>
 	<script src="js/ios-bug-min.js"></script>
